tests/standalone-tests/valid/call-chaining.lua
local stat
local pl
local ttl = stat.display_attr("title")(pl)
print(ttl)