tests/standalone-tests/failing/invalid-function-ref.lua
local a = nil

local f = function()
        print(a)
        a:send("hello")
end

f()